# ConcreteScript

./: CMakeLists.txt  LICENSE  README.md
Interpreter/include/: config.h  lexer.h
Interpreter/src/: hello.c  lexer.c  main.c
Interpreter/test_files/: tokens.coc
interpreter/include/: lexer.h
interpreter/src/: lexer.c
interpreter/test_files/: tokens.coc
